# service-htsget

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  Makefile  README.md  cdk.context.json  package.json  pnpm-lock.yaml  tsconfig.json
.github/workflows/: pr-tests.yml
app/: .env.example  Cargo.toml  Makefile  README.md
app/htsget-auth/: Cargo.toml
app/htsget-auth-api-lambda/: Cargo.toml
app/htsget-auth-api-lambda/src/: main.rs
app/htsget-auth-api-server/: Cargo.toml
app/htsget-auth-api-server/src/: main.rs
app/htsget-auth/src/: config.rs  error.rs  lib.rs  router.rs
infrastructure/: README.md
infrastructure/stage/: config.ts  constants.ts  htsget-stack.ts
infrastructure/toolchain/: stateless-stack.ts
test/: stack.test.ts  stage.test.ts  toolchain.test.ts
