[package]
name = "htsget-auth-api-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
lambda_http = "0.14"

htsget-auth = { path = "../htsget-auth" }
