[package]
name = "htsget-auth-api-server"
version = "0.1.0"
license.workspace = true
edition.workspace = true
authors.workspace = true
rust-version.workspace = true

[dependencies]
dotenvy = "0.15"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
clap = { version = "4", features = ["derive", "env"] }
tracing = "0.1"
http = "1"
axum = "0.8"

htsget-auth = { path = "../htsget-auth" }
